--- a/demo.csproj
+++ b/demo.csproj
@@ -67,16 +67,28 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="1671939962612.jpg" />
+    <Content Include="addrotator1.xml" />
+    <Content Include="adrotator.aspx" />
     <Content Include="ASP.NET.aspx" />
     <Content Include="Assignment 1.1.aspx" />
     <Content Include="Assignment 1.2.aspx" />
     <Content Include="Assignment 1.3.aspx" />
     <Content Include="Assignment 1.4.aspx" />
     <Content Include="calculator.aspx" />
+    <Content Include="FileUpload.aspx" />
+    <Content Include="IMG20221118085421.jpg" />
     <Content Include="Web.config" />
     <Content Include="WebForm1.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="adrotator.aspx.cs">
+      <DependentUpon>adrotator.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="adrotator.aspx.designer.cs">
+      <DependentUpon>adrotator.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ASP.NET.aspx.cs">
       <DependentUpon>ASP.NET.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -118,6 +130,13 @@
     </Compile>
     <Compile Include="calculator.aspx.designer.cs">
       <DependentUpon>calculator.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="FileUpload.aspx.cs">
+      <DependentUpon>FileUpload.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="FileUpload.aspx.designer.cs">
+      <DependentUpon>FileUpload.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebForm1.aspx.cs">
