--- a/demo.csproj
+++ b/demo.csproj
@@ -75,9 +75,13 @@
     <Content Include="Assignment 1.2.aspx" />
     <Content Include="Assignment 1.3.aspx" />
     <Content Include="Assignment 1.4.aspx" />
+    <Content Include="Assignment 2.1.aspx" />
+    <Content Include="Assignment 2.2.aspx" />
     <Content Include="calculator.aspx" />
+    <Content Include="Assignment 2.3.aspx" />
     <Content Include="FileUpload.aspx" />
     <Content Include="IMG20221118085421.jpg" />
+    <Content Include="Masterpagewebform.aspx" />
     <Content Include="Web.config" />
     <Content Include="WebForm1.aspx" />
   </ItemGroup>
@@ -124,6 +128,20 @@
     <Compile Include="Assignment 1.4.aspx.designer.cs">
       <DependentUpon>Assignment 1.4.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Assignment 2.1.aspx.cs">
+      <DependentUpon>Assignment 2.1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Assignment 2.1.aspx.designer.cs">
+      <DependentUpon>Assignment 2.1.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Assignment 2.2.aspx.cs">
+      <DependentUpon>Assignment 2.2.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Assignment 2.2.aspx.designer.cs">
+      <DependentUpon>Assignment 2.2.aspx</DependentUpon>
+    </Compile>
     <Compile Include="calculator.aspx.cs">
       <DependentUpon>calculator.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -131,12 +149,33 @@
     <Compile Include="calculator.aspx.designer.cs">
       <DependentUpon>calculator.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Assignment 2.3.aspx.cs">
+      <DependentUpon>Assignment 2.3.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Assignment 2.3.aspx.designer.cs">
+      <DependentUpon>Assignment 2.3.aspx</DependentUpon>
+    </Compile>
     <Compile Include="FileUpload.aspx.cs">
       <DependentUpon>FileUpload.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="FileUpload.aspx.designer.cs">
       <DependentUpon>FileUpload.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="masterpage.Master.cs">
+      <DependentUpon>masterpage.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="masterpage.Master.designer.cs">
+      <DependentUpon>masterpage.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Masterpagewebform.aspx.cs">
+      <DependentUpon>Masterpagewebform.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Masterpagewebform.aspx.designer.cs">
+      <DependentUpon>Masterpagewebform.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebForm1.aspx.cs">
@@ -148,6 +187,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="masterpage.Master" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
